complete app with ajax $ jquery

--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -1,59 +1,18 @@
-<table id="tasklist">
-    <tr>
-        <th>ردیف</th>
-        <th>عنوان</th>
-        <th>وضعیت</th>
-        <th>تاریخ ایجاد</th>
-        <th></th>
-        <th></th>
-    </tr>
-    {% for task in tasks %}
-        {% if task.active %}
-            <tr id="{{ task.id }}">
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ task.title }}</td>
-                    <td>
-                        {% if task.active %}
-                        <span class="badge bg-success text-light">فعال</span> 
-                        {% else %}
-                            <span class="badge bg-warning">غیرفعال</span> 
-                        {% endif %}
-                    </td>
-                    <td>{{ task.created }}</td>
-                    <td>
-                        <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
-                            {% csrf_token %}
-                            <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
-                            <button type="submit" id="update-button" class="not_active_button">غیرفعال کردن</button>  
-                        </form>
-                    </td>
-                    <td>
-                        <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
-                    </td>
-            </tr>
-        {% else %}
-            <tr class="back_dark {{ task.id }}">
-                <td>{{ forloop.counter }}</td>
-                <td>{{ task.title }}</td>
-                <td>
-                    {% if task.active %}
-                    <span class="badge bg-success text-light">فعال</span> 
-                    {% else %}
-                        <span class="badge bg-warning">غیرفعال</span> 
-                    {% endif %}
-                </td>
-                <td>{{ task.created }}</td>
-                <td>
-                    <form method="post" id="update-from" data-url="{% url 'task:active_task' id=task.id %}" data-id="{{ task.id }}">
-                        {% csrf_token %}
-                        <input type="hidden" id="input_active" name="task_id" value="{{ task.id }}">
-                        <button type="submit" id="update-button" class="not_active_button">فعال کردن</button>  
-                    </form>
-                </td>
-                <td>
-                    <a href="{% url 'task:delete_task' id=task.id %}" id="{{ task.id }}" class="delete_button">حذف کردن</a>
-                </td>
-            </tr>
-        {% endif %}
-    {% endfor %}
-</table>
+{% for task in tasks %}
+    <div class="card mt-3 card-c" id="{{task.id}}" style="
+        {% if not task.active %} 
+            text-decoration:line-through;background: linear-gradient(
+                rgba(0, 0, 0, 0.2),
+                rgba(0, 0, 0, 0.2)); 
+        {% endif %}">
+        <div class="card-body">
+            <h5 class="heading">{{task.title}} </h5>
+            <p class="date">
+                {{task.created}}
+            </p>
+            <span class="float-left">
+                <a data-id="{{ task.id }}"  id="{{task.id}}"  class="btn btn-danger btn_del">X</a>
+            </span>
+        </div>
+    </div>    
+{% endfor %}
