--- a/templates/tasks/home.html
+++ b/templates/tasks/home.html
@@ -6,28 +6,75 @@
     <div class="row mt-4 d-flex justify-content-center content">
         <div class="col-lg-4 col-sm-9 left">
              <h4 class="ml-2">Django & AJAX</h4>
-             <form class="mt-3" method="POST" id="form" data-url="{% url 'task:taskajax' %}">
+             <form class="mt-3" method="post" id="task-form">
                 {% csrf_token %}
-                <input type="text" class="input-form" name=title placeholder="عنوان کار ...">
+                <input type="text" class="input-form" name='title' placeholder="عنوان کار ...">
                 <button id="task-button" class="submit" type="submit">ثبت</button>
             </form>
         </div>
         <div class="col-lg-6 col-sm-9" id="lists">
         {% for task in tasks %}
-            <div class="card mt-3 card-c" id="{{stud.id}}" style="{% if stud.completed %} text-decoration:line-through;background: linear-gradient(
-            rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)); {% endif %}">
+            <div class="card mt-3 card-c" id="{{task.id}}" style="
+                {% if not task.active %} 
+                    text-decoration:line-through;background: linear-gradient(
+                        rgba(0, 0, 0, 0.2),
+                        rgba(0, 0, 0, 0.2)); 
+                {% endif %}">
                 <div class="card-body">
                     <h5 class="heading">{{task.title}} </h5>
-                    <p>{{task.created}}
-                        <span class="float-right">
-                            <a  id="{{task.id}}"  class="btn btn-danger btn_del">X</a>
-                        </span>
+                    <p class="date">
+                        {{task.created}}
                     </p>
+                    <span class="float-left">
+                        <a href="{% url 'task:delete_task' id=task.id %}" data-id="{{ task.id }}" id="{{ task.id }}"  class="btn btn-danger btn_del">X</a>
+                    </span>
                 </div>
             </div>    
         {% endfor %}
         </div>
     </div>
+
+    <script>
+        $(document).ready(function(){
+            // for create task
+            $('#task-form').on('submit', function(e){
+                e.preventDefault()
+                const lists = $('#task-form').serialize();
+                $.ajax({
+                    type: 'POST',
+                    url: "{% url 'task:home' %}",
+                    data: lists,
+                    dataType: 'json',
+                    success: function(data){
+                        $('#lists').html(data.rendered_table);
+                        $('#task-form')[0].reset();
+                    }
+                })
+            })
+
+
+            // for delete task
+            $(document).on('click', '.btn_del', function(e){
+                e.preventDefault()
+                const id = $(this).data('id')
+                $.ajax({
+                    url: `delete/${id}`,
+                })
+                $('#' + id).fadeOut(300)
+            })
+
+
+            // for de-active task
+            $(document).on('click', '.card', function(e){
+                e.preventDefault()
+                const id = this.id
+                $.ajax({
+                    url: `update/${id}`,
+                })
+                $('#' + id).addClass('completed')
+            })
+        })
+    </script>
 
 {% endblock content %}
 
